Add tests for Set